objects/PC_Dispense__c.object
<CustomObject>
    <description>Patient Connect custom object to capture dispense details for medication</description>
    <fields>
        <fullName>PC_Dispensed_Date__c</fullName>
        <description>The date on which the medication is dispensed.</description>
        <label>Dispensed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Dispensed_Quantity__c</fullName>
        <description>The quantity of dispensed medication.</description>
        <label>Dispensed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Fill_No__c</fullName>
        <description>The number of times the medication is refilled.</description>
        <label>Fill Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>PC_OrderItem__c</referenceTo>
        <relationshipLabel>Dispenses</relationshipLabel>
        <relationshipName>Dispenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The pharmacy referral associated with a specific dispense.</description>
        <label>Pharmacy Referral</label>
        <referenceTo>PC_Pharmacy_Referral__c</referenceTo>
        <relationshipLabel>Dispenses</relationshipLabel>
        <relationshipName>Dispenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Unit_of_Measure__c</fullName>
        <description>The unit of measurement to measure the medication.</description>
        <label>Unit of Measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Dispense</label>
    <nameField>
        <displayFormat>DIS-{000000}</displayFormat>
        <label>Dispense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>